[gd_scene load_steps=2 format=3 uid="uid://cclapgve2gf4b"]

[ext_resource type="Script" path="res://scripts/MenuScripts/main_menu.gd" id="1_qib4x"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qib4x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TutorialButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="HostButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="JoinButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 614.0
offset_top = 314.0
offset_right = 716.0
offset_bottom = 337.0
grow_vertical = 2
text = "Coming Soon
"

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = 613.0
offset_top = 355.0
offset_right = 715.0
offset_bottom = 378.0
text = "Coming Soon
"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/TutorialButton" to="." method="tutorial_button_pressed"]
